TopContainerView now passes the correct paint info during immersive mode

During immersive mode, TopContainerView relies on
BrowserNonClientFrameView to paint parts of TopContainerView. This
requires a call to BrowserNonClientFrameView::Paint() from
TopContainerView.

This patch fixes the call by passing in the correct parameters for
paint. It also removes the method from PaintInfo that is no longer
required post this change.

Bug: 766328
Change-Id: I5bb16c80cc01503959c040c476f6cd60b5975c5d
Component: ChromeOS, TopContainer Browser, TabStrip, Paint
Reviewed-on: https://chromium-review.googlesource.com/673764
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503325}
Former-commit-id: 77323ee6040fa540fa5f8e39a8253c5ba653e296